--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="hero-section">
+		<div class="product-card">
+			<img src="https://m.media-amazon.com/images/I/41FE6cItm3L.jpg" alt="Product 1">
+			<div class="product-card-content">
+				<div class="product-card-title">Product 1</div>
+				<div class="product-card-description">Product 1 Description</div>
+	        </div>
+	    </div>
+		<div class="product-card">
+			<img src="https://m.media-amazon.com/images/I/61aRNPVrYyL._AC_SY135_.jpg" alt="Product 2">
+			<div class="product-card-content">
+	            <div class="product-card-title">Product 2</div>
+	            <div class="product-card-description">Product 2 Description</div>
+	        </div>
+	    </div>
+		<div class="product-card">
+	        <img src="https://m.media-amazon.com/images/I/61rq3n8ZrUL._AC_SY135_.jpg" alt="Product 3">
+	        <div class="product-card-content">
+	            <div class="product-card-title">Product 3</div>
+	            <div class="product-card-description">Product  Description</div>
+	        </div>
+	    </div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
